# auto-chess

./: .gitattributes  .gitignore  LICENSE  README.md  build.py  install.py  pyproject.toml  requirements.txt  run.py
auto_chess/: __init__.py  config.py  main.py
auto_chess/capture/: __init__.py  board_reader.py  screen.py
auto_chess/controller/: chess_com.py
auto_chess/engine/: chess_engine.py
auto_chess/modes/: __init__.py  auto_mode.py  keyboard_mode.py  suggest_mode.py
auto_chess/recognition/: __init__.py  piece_detector.py
auto_chess/stealth/: __init__.py  anti_pattern.py  humanizer.py  mouse_controller.py  security.py
auto_chess/ui/: calibration_dialog.py  main_window.py  overlay.py  quick_start.py
auto_chess/ui/themes/: __init__.py  dark_theme.py  professional_theme.py
ejecutable/: GENERAR_EXE.bat  README.md
